--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.2",
     "graphql": "^0.13.1",
     "graphql-tools": "^2.21.0",
-    "pm2": "^2.10.1"
+    "pm2": "^2.10.1",
+    "ramda": "^0.25.0"
   }
 }
