--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "pm2-dev $npm_package_main"
+    "start": "pm2-dev $npm_package_main",
+    "lint": "standard",
+    "lint:fix": "standard --fix",
+    "prepush": "npm run lint"
   },
   "dependencies": {
     "apollo-server-express": "^1.3.2",
@@ -15,5 +18,9 @@
     "graphql-tools": "^2.21.0",
     "pm2": "^2.10.1",
     "ramda": "^0.25.0"
+  },
+  "devDependencies": {
+    "husky": "^0.14.3",
+    "standard": "^11.0.0"
   }
 }
